# ExeModules

./: CMakeLists.txt  README.md
cmake/: environment.cmake
lib/: CMakeLists.txt
lib/include/cht/: base.hpp
lib/include/cht/api/: ipc.hpp
lib/include/cht/helpers/: guards.hpp  inject_file.hpp  logger.hpp  path.hpp  process.hpp  utils.hpp
lib/include/mod/: base.hpp
lib/include/mod/api/: ipc.hpp  patch.hpp
lib/include/mod/helpers/: guards.hpp  inject_file.hpp  logger.hpp  path.hpp  process.hpp  utils.hpp
lib/source/api/: loader.cpp
lib/source/helpers/: inject_file.cpp  path.cpp  process.cpp  utils.cpp
loader/: CMakeLists.txt
loader/source/: main.cpp
module/: CMakeLists.txt
module/source/: interface.cpp  main.cpp
template/: CMakeLists.txt
template/source/: interface.cpp  main.cpp
